<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">MySharApp</string>
    <string name="footer">Copyright © MXShare 2020. All Right Reserved</string>
    <string name="text_aboutSummary">Copyright © MXShare 2020. All Right Reserved</string>
    <string name="app_description">Send Karo ! Receive Karo !</string>
    <string name="developer">Pharid Codecanyon</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="text_navigationDrawerOpen">Open navigation drawer</string>
    <string name="text_navigationDrawerClose">Close navigation drawer</string>
    <string name="mesg_connectionFailure">Connection failed</string>
    <string name="mesg_scanningDevices">Finding nearby devices</string>
    <string name="ques_receiveFile">Receive the file?</string>
    <string name="butn_accept">Accept</string>
    <string name="butn_reject">Reject</string>
    <string name="text_sending">Sending</string>
    <string name="butn_cancelSending">Cancel sending</string>
    <string name="text_receiving">Receiving</string>
    <string name="butn_cancelReceiving">Cancel receiving</string>
    <string name="mesg_fileReceived">%s has been received</string>
    <string name="butn_scan">Scan</string>
    <string name="text_listEmpty">No items</string>
    <string name="text_deviceName">Device name</string>
    <string name="mesg_formatNotSupported">Unsupported format</string>
    <string name="mesg_fileSendError">Could not send file. %s</string>
    <string name="mesg_fileReceiveError">Could not receive %s.</string>
    <string name="text_deviceList">Devices</string>
    <string name="text_fileShareAppChoose">Choose an app to share with</string>
    <string name="text_receivedFiles">Received files</string>
    <string name="butn_delete">Delete</string>
    <string name="text_deleteConfirm">Confirm deletion</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_close">Close</string>
    <string name="text_deviceModelInfo">Device name</string>
    <string name="butn_shareWithTBShare">Share with MXShare</string>
    <string name="mesg_somethingWentWrong">Something went wrong</string>
    <string name="text_findDevicesHint">No familiar devices</string>
    <string name="mesg_stillScanning">Still scanning</string>
    <string name="text_storagePath">Storage path</string>
    <string name="text_allowToConnect">Allow to connect</string>
    <string name="text_connectionPermission">Connection permission</string>
    <string name="ques_allowDeviceToConnect">Let this device connect?</string>
    <string name="mesg_stopping">Stopping</string>
    <string name="mesg_scanCompleted">Scan completed</string>
    <string name="text_application">App</string>
    <string name="text_image">Image</string>
    <string name="text_music">Music</string>
    <string name="text_video">Video</string>
    <string name="butn_showSystemApps">Show system apps</string>
    <string name="mesg_notAllowed">You are not allowed</string>
    <string name="mesg_connectionProblem">Connection problem</string>
    <string name="butn_multiSelect">Multi selection</string>
    <string name="butn_receive">Receive</string>
    <string name="text_receive" translatable="false">@string/butn_receive</string>
    <string name="butn_appLaunch">Launch</string>
    <string name="ques_launchApplication">Do you want to launch this app?</string>
    <string name="mesg_launchApplicationError">This app cannot be launched</string>
    <string name="mesg_textCopiedToClipboard">Text copied to clipboard</string>
    <string name="ques_copyToClipboard">Copy to clipboard?</string>
    <string name="text_textReceived">Text received</string>
    <string name="text_receivedTextSummary">Received clipboard text</string>
    <string name="text_typeText">Write something to send…</string>
    <string name="text_textEditor">Text editor</string>
    <string name="butn_done">Done</string>
    <string name="text_empty">(empty)</string>
    <string name="butn_wifiSettings">Wi-Fi</string>
    <string name="text_pendingTransfers">Pending transfers</string>
    <string name="text_stopping">Stopping!</string>
    <string name="text_cancellingTransfer">Canceling job…</string>
    <string name="butn_killNow">Kill now</string>
    <string name="mesg_groupOngoingNotice">Waiting for %s to finish before transferring this file</string>
    <string name="butn_proceed">Proceed</string>
    <string name="ques_removeQueue">Remove transfer?</string>
    <string name="butn_remove">Remove</string>
    <string name="ques_removeDevice">Remove this device?</string>
    <string name="text_removeDeviceNotice">When you remove a device, its transfers will also be removed</string>
    <string name="text_removePendingTransferSummary">This will remove %s from the queue</string>
    <string name="ques_removeAll">Remove all?</string>
    <string name="text_removeCertainPendingTransfersSummary">This will remove all pending transfers you see here</string>
    <string name="text_availableNetworks">Choose network - %s</string>
    <string name="text_noNetworkAvailable">No network available</string>
    <string name="text_folder">Folder</string>
    <string name="mesg_organizingFiles">Organising your files</string>
    <string name="mesg_communicating">Communicating</string>
    <string name="text_communicationService">Communication service</string>
    <string name="text_chooserTargetService">Device choice provider</string>
    <string name="text_transactionViewer">View transaction</string>
    <string name="text_error">Error</string>
    <string name="text_notAllowedHelp">Check if you are allowed on %1$s \n\nDevices &gt; %2$s &gt; Allow to connect &gt; (check it)</string>
    <string name="butn_saveTo">Save to</string>
    <string name="mesg_secureExit">Press again to exit</string>
    <string name="butn_create">Create</string>
    <string name="text_createFolder">Create folder</string>
    <string name="mesg_folderCreateError">Folder could not be created</string>
    <string name="text_requestPermissionStorageSummary">This permission allows MXShare to read and write to your device\'s storage for receiving and sharing files.</string>
    <string name="butn_settings">Settings</string>
    <string name="mesg_currentPathUnavailable">This folder cannot be used </string>
    <string name="text_storage">Storage</string>
    <string name="text_shareFiles">Share files</string>
    <string name="mesg_pathSaved">The directory has been saved</string>
    <string name="butn_search">Search</string>
    <string name="butn_changeConnection">Change connection</string>
    <string name="text_fileName">File name</string>
    <string name="text_fileSize">File size</string>
    <string name="text_fileMime">File type</string>
    <string name="text_fileStatus">File status</string>
    <string name="text_transactionDetails">Details</string>
    <string name="text_fileExplorer">File explorer</string>
    <string name="butn_createFolder">Create folder</string>
    <string name="text_chooseFolder">Choose folder</string>
    <string name="text_chooseFile">Choose file</string>
    <string name="mesg_pathSameError">You can not select the old folder</string>
    <string name="ques_checkOldFiles">Move files?</string>
    <string name="text_checkOldFiles">You can move associated files completed and partly completed to this folder and this may take some time depending on the sizes</string>
    <string name="mesg_newFilesReceived">New files have been received</string>
    <string name="butn_show">Show</string>
    <string name="text_preparingFiles">Preparing files</string>
    <string name="text_savingDetails">Saving details</string>
    <string name="text_version">Version</string>
    <string name="text_flagPending">Pending</string>
    <string name="text_flagRunning">Running</string>
    <string name="text_flagInterrupted">Interrupted</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_longAgo">Long ago</string>
    <string name="text_interfaceWifiDirect">Wi-Fi Direct</string>
    <string name="text_interfaceWireless">Wi-Fi</string>
    <string name="text_interfaceBluetooth">Bluetooth</string>
    <string name="text_interfaceEthernet">Ethernet</string>
    <string name="text_interfaceUnknown">Unknown connection</string>
    <string name="text_automaticNetworkConnectionFailed">Could not connect the device. Its address may have changed. Try reconnecting to the network while MXShare is open.</string>
    <string name="text_automaticNetworkConnectionOngoing">Choosing the best connection</string>
    <string name="butn_retryReceiving">Retry receiving</string>
    <string name="butn_ask">Ask</string>
    <string name="text_requestPermissionStorage">Storage permission</string>
    <string name="text_requestPermissionReadPhoneState">Permission to read phone state</string>
    <string name="text_requestPermissionReadPhoneStateSummary">MXShare needs to access your device\'s serial number to create a long-term identity number, helping other devices recognize you</string>
    <string name="text_emulatedMediaDirectory">Emulated (%s)</string>
    <string name="mesg_notEnoughSpace">Not enough space</string>
    <string name="text_savePath">Save path</string>
    <string name="text_flagRemoved">Removed</string>
    <string name="butn_copyToClipboard">Copy to clipboard</string>
    <string name="text_communicationServiceRunning">MXShare can share files now</string>
    <string name="text_communicationServiceStop">Tap to end session</string>
    <string name="text_remainingTime">ETA %s</string>
    <string name="butn_showFiles">Show files</string>
    <string name="butn_trustZoneDevice">Set as Trust device</string>
    <string name="butn_turnTrustZoneOn">Turn Trust on</string>
    <string name="butn_turnTrustZoneOff">Turn Trust off</string>
    <string name="butn_download">Download</string>
    <string name="mesg_clipboardUpdateNotice">Revise the text or press again to exit</string>
    <string name="mesg_textSaveNotice">Save the text or press again to exit</string>
    <string name="butn_update">Update</string>
    <string name="butn_save">Save</string>
    <string name="text_timeJustNow">Just now</string>
    <string name="mesg_errorHotspotPermission">MXShare needs permission to set up a hotspot</string>
    <string name="text_TBShareHotspot">MXShare hotspot</string>
    <string name="butn_connect">Connect</string>
    <string name="butn_disconnect">Disconnect</string>
    <string name="text_TBShareHotspotDescription">You can send files directly via this open network created by a nearby MXShare device.</string>
    <string name="mesg_warningHotspotMobileActive">Connected devices may use your cellular data. You may want to turn it off.</string>
    <string name="butn_skip">Skip</string>
    <string name="mesg_scanningSelfHotspot">Searching for MXShare hotspot</string>
    <string name="mesg_suggestSelfHotspot">You can enable Wi-Fi to search for a MXShare hotspot</string>
    <string name="butn_enable">Enable</string>
    <string name="mesg_locationPermissionRequiredSelfHotspot">Allow MXShare to search and create hotspot</string>
    <string name="butn_locationSettings">Location</string>
    <string name="mesg_locationDisabledSelfHotspot">Enable location service to see scan results and create hotspot</string>
    <string name="butn_startHotspot">Set up hotspot</string>
    <string name="butn_scanQrCode">Scan QR Code</string>
    <string name="butn_useExistingNetwork">My QRCode</string>
    <string name="ques_needHelp">Need a helping hand?</string>
    <string name="butn_enterIpAddress">Enter IP Address</string>
</resources>