<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="47">

        <com.abc.mxcloneshare.view.RadarScanView
            android:id="@+id/radar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:circleColor="#fff"
            app:circleNum="4"
            app:flicker="3"
            app:raindropNum="4"
            app:showCross="true"
            app:speed="5"
            app:sweepColor="#fff" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_data_transfer"
            android:orientation="vertical"
            android:weightSum="30" />

    </RelativeLayout>

    <TextView
        android:id="@+id/header_default_device_name_text"
        style="@style/TextAppearance.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_gravity="center"
        android:layout_weight="4"
        android:text="Make sure your friend is in receive mode."
        android:textColor="@color/colorDivider" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/short_content_width_padding"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="@dimen/short_content_width_padding"
        android:layout_weight="41">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"/>

            <LinearLayout
                android:id="@+id/connection_option_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_help_circle_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ques_needHelp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connection_option_hotspot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_wifi_tethering_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butn_startHotspot" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connection_option_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_wifi_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butn_useExistingNetwork" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connection_option_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_qrcode_scan_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butn_scanQrCode" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connection_option_manual_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_ip_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butn_enterIpAddress" />

            </LinearLayout>

            <!--
            <LinearLayout
                android:id="@+id/connection_option_devices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?rectSelector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    app:srcCompat="@drawable/ic_devices_white_24dp"
                    app:tint="?colorSecondary" />

                <TextView
                    style="@style/TextAppearance.Primary.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/butn_useKnownDevice" />

            </LinearLayout>-->
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/admob_adview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="8"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit"
        tools:visibility="visible">

    </com.google.android.gms.ads.AdView>

</LinearLayout>